<resources>
    <string name="app_name">SYDD</string>
    <string name="welcome">Welcome Back!</string>
    <string name="date">{date}</string>
    <string name="home">Home</string>
    <string name="num_events_home">{num_events}</string>
    <string name="sleep_text">{sleep_text}</string>
    <string name="step_text">{step_text}</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
