<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/welcome"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/date"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_text" />

            <!--
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:boxBackgroundColor="#00FFFFFF"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopEnd="2dp"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidth="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:hint="How Are You Feeling :)"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
            -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/date_text">


                <Button
                    android:id="@+id/num_events_home"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/circle"
                    android:text="@string/num_events_home"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/roboto"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="190dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_toEndOf="@+id/num_events_home"
                    android:translationZ="1dp">

                    <TextView
                        android:id="@+id/sleep_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:drawableLeft="@drawable/sleep"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/roboto"
                        android:text="Sleep"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/sleep_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/sleep_heading"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/sleep_text"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/steps_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:layout_alignTop="@id/sleep_data"
                        android:drawableLeft="@drawable/pet"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/roboto"
                        android:text="Steps"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/step_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/steps_heading"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/step_text"
                        android:textColor="#000000"
                        android:textSize="24sp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="160dp"

                    android:layout_centerInParent="true"
                    android:background="@drawable/rectangle" />


            </RelativeLayout>




        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>